fix background issues on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
 body {
     /* height: 100vh; */
     margin: 0;
+    padding: 0;
     /* font-family: Montserrat, sans-serif; */
     font-family: 'Bai Jamjuree', sans-serif;
     font-family: 'WF Visual Sans', sans-serif;
@@ -19,7 +20,32 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-color: black;
+
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
 }
+
+body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background-image: url('../img/lincoln_bg_cropped.png');
+
+    background-repeat: no-repeat;
+    background-position: center;
+
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+  }
 
 .landing-page {
     opacity: 1.0;
